--- a/db/pages.yml
+++ b/db/pages.yml
@@ -29,7 +29,7 @@
 
       Illustrations and handwriting by Brooke Budner
 
-      Development and mapmaking by Mikel and Mapufacture
+      Development and mapmaking by Mikel and Mapufacture, Shoaib and Nomad Labs
 
     label: /images/text/about_the_site.png
 - - page_002
