updated the deploy script and amazon_s3; getting ready to move the image uploads to amazon s3

--- a/config/amazon_s3.yml
+++ b/config/amazon_s3.yml
@@ -12,3 +12,8 @@ production:
   bucket_name: appname
   access_key_id: 
   secret_access_key: 
+
+express:
+  bucket_name: appname
+  access_key_id: 
+  secret_access_key: 
