--- a/db/pages.yml
+++ b/db/pages.yml
@@ -9,6 +9,8 @@
       
       America has always respected its farmers ideologically, but the financial and social rewards have not always followed. The time has come for us to embrace farming and its practitioners--to recognize their service, to praise them, and to pay them a living wage. The time has come for the agricultural arts, so valued by our forefathers, to inspire the best, brightest and most dedicated young people to enter the field. Farming is hard work, it is good work, it is bold work. Farming means nurturing the interface of humanity and ecology, cherishing that delicate, complex and fragrant soil. Bringing forth food, life and a sustained well being for this country.
       
+      !/images/GH.carrotsdon'tgrowinconcrete.b:w.art.brk.png!
+
       We challenge the eaters, thinkers, mothers, markets and policy makers of this country-- to support the young farmers. We challenge the ecologists, humanists, activists, pacifists and survivalists to join in this movement. We vote with our fork, we vote with our vote, let us vote with our lives-- and restore agriculture, that delicious foundation of our human society. It is hard work, and we can only do it together.
       
       !/images/text/why.png!
@@ -19,6 +21,8 @@
       
       The website allows young farmers to fill out relevant details about their farming operation, their history farming, their future farming vision. Its a chance for us to raise our voices on behalf of  American agriculture.
       
+      !/images/GH.Hen.b:w.art.brk.png!
+
       Journalists from national and local media will be able to access profiles of young farmers and get in contact with these rock star farmers
       
       The survey questions will generate useable demographic information about the obstacles for young farmers, the feasibility of various land-tenure options, and the potential rural economic development impact of a surge in new farmers.
@@ -30,32 +34,79 @@
       Illustrations and handwriting by Brooke Budner
       
       Development and mapmaking by Mikel and Mapufacture, Shoaib and Nomad Labs
-    label: /images/text/about_the_site.png
+    label: /images/text/about_the_site_small.png
 - - page_002
-  - permalink: sponsors
-    name: Sponsors
+  - permalink: manifesto
+    name: Manifesto
+    label: /images/text/sponsors_small.png
     content: |-
-      
-      The Greenhorns would like to thank Organic Valley for their generous sponsorship of *Serve Your Country Food*
-      
-      !http://www.organicvalley.coop/fileadmin/templates/images/logos/ov_logo01.gif!
-    label: /images/text/sponsors.png
+      *Young Farmers, a call to arms!*
+
+      Coast to coast, thousands of people are inspired to dig in and grow food! Yet access to the land, capital, market savvy, and skills requires for successful farming is available only to a dauntless few.  Those few are brave, strong, and delightful advocates of the purposeful life, but it will take more than a few to reclaim a food system of industrial monocultures, labor abuse, and toxic factory conditions. This is the injustice our movement seeks to repair. 
+
+      Indeed, it will take the muscle and heart of a large-scale, young-farmers movement: thousands upon thousands of hands on the land -- the hands of women and immigrants, the hands of fourth-generation farm kids, the hands of college graduates and former farmworkers-turned-farmers. It will take thousands of new growers of fruits, nuts, vegetables, grains, dairy, and livestock to transform the landscape of sprawling development and corporate control into a dignified, livable, and culturally rich mosaic of ecological farming.
+
+      !/images/GH.goat.color.art.ros.png!
+
+      The young farmers now emerging onto the land seek to reclaim, restore, and resettle the deserted rural towns of America. We are similarly poised to  revive the fabric of urban life with markets, gardens, bees, corn patches and waterways. Motivated by a force of intention that cannot be rationalized economically, with lives driven by an instinct for direct action and stewardship that honors the planet, people, and place, we are the allies of every American. Our instincts are emboldened by the mercury shatter of dew on the broccoli plants at dawn, by the roar of pollinators in a flowering crop of buckwheat, and by the river of neighbors streaming through the farm-gate clamoring for "real" tomatoes and happy chickens. The hands of young farmers on the land seek to push forward an agenda of sustainability on a human scale.
+
+      There is much to learn, and there is much, as a culture, that we risk forgetting. We need these bodies, we need their work, we need their food and their protagonism. We need young farmers to succeed and we need that success to be rewarded.
+
+      !/images/GH.FarmTools.b:w.art.brk.png!
+
+      As fledgling farmers and activists within this community, we see these to be some of the key political, economic, and cultural requirements for that success:
+
+      * A hospitable policy environment that prioritizes a next generation of food producers -- not massive corporate subsidies, not cheap imports from across the world  
+      * A regulatory framework friendly to smaller producers
+      * Affordable credit for capitalization of diversified farms
+      * Public-private partnerships to give aspiring farmers better access to farmland
+      * University research focused on low-input, resilient, sustainable production
+      * Practical, school-based, agricultural training programs (hands in the soil)
+      * Reformed land-use proscriptions at the community and state level -- some land and soil should never be developed
+      * Incubator farms to rear and train fledgling farmers and an Agricultural Journeymen program to help people navigate the path from aspiring farmer to successful new farmer.
+      * Processing infrastructure and facilities for fruits, meats, dairy, etc. at the local scale
+      * State-sponsored direct-marketing venues -- covered markets, public markets, and friendly zoning for farmers markets and farm-stands
+      * Comprehensive, affordable health insurance for farmers and food-workers
+      * Improved state-sponsored nutrition programs for at-risk, elderly and civic establishments.
+      * Start-up grants and an expansion of Individual Development Accounts, matched-savings program for qualified young farmers, to afford irrigation, tools, equipment, fencing, land, production infrastructure, etc.
+      * A cultural revaluation of farming as an ambitious, worthwhile life-venture, celebrated by family, church, and society
+      * Fiscal underwriting of farm-supportive NGOs and programs
+      * Songs, dances, parties, and festivals for young farmers in the countryside
+      * High-speed internet connectivity in rural places
+      * New farmer forums for networking, marketing, resource-sharing, processing, and farmer-to-farmer exchanges
+      * Access to locally grown seed and protection from transgenic pollution
+      * Fair wages and equal labor rights for all farmworkers, even those with "illegal" status
+      * Consumer education about the realities and true cost of food production
+      * More consumer/producer alliances such as community supported agriculture and community food cooperatives
+
+      And what is success? Success is an edible future, when local populations are fed by local fields and sensible nutrition is affordable and accessible. Where we address poverty and hunger, not with biotechnology, but with long-term access to the means of production, and with proximity to that productive plenty which we can achieve only with careful stewardship of our soil and land base -- a wealth immeasurable in dollars. Success is a smooth energy transition, a satisfying daily bread, a culture in which we have restored honor, and respect to the profession of farming.
+
+      *Call to arms*
+
+      Arms strong and hands calloused, eyes open to the beauty of every morning. Our spirits are prepared for the long row still to hoe, our hearts full with the support of family and community. Let us unite, young farmers! Let us fight for the right to farmable land!  To the pursuit of an equitable marketplace, and for recognition from society. We are here, we are indispensable, we are a cornerstone of the future of food. Let us welcome many new entrants into agriculture, striving to share our lessons, seeds and stories with generations to come. Now is the time for action.
 - - page_003
   - permalink: mapslinks
     name: Maps and Links
+    label: /images/text/maps_small.png
     content: |-
-      if you know of a map that provides compelling information- we'd love 
-      to put it up. Please email severine@pixiepoppins.org
-      
+     !/images/labels/why_we_like_maps.png(Why we like maps)!
+
+      Maps are useful. Useful in building empires, yes--but also useful in retrofitting empires. Our landscape is scarred by the boundaries, sacrifice zones, dreams and drainages of American empire. Whether you live in the East, with its abandoned hydro-powered industrial infrastructure, or in the west with mega-dams and irrigated Eden, or in the midwest, with over-pumped aquifers and plastic tilings riddling the water table - it is clear that the legacies of past land use figure deeply into our plans for the future. The future that we are moving towards, that we are ourselves crafting with our physical work, and with our thoughtful engagement- that future cannot be contained only in the vessels+grid constructed in the last centuries. The future that we are building, the local food systems, the energy conservation systems, the sensible transport systems- these systems are a cooperative re-design of the whole social matrix. Overlaid on the map of the past, is a map for the future.
+
+      Here we've linked to maps of cell phone reception, Amtrak rights of way,  oil pipe lines, rivers, national forests, native american reservation lands, highways, soil types, population densities, sheep migration patterns, land ownership statistics etc.   Like the early pioneers, whose settlements were shaped by hospitable valleys and favorable harbors or the industrial towns, perched on railway-intersections, cattle shipment yards, coal deposits- the work of future farmers is to use the mapped topography of America not as a constraint, but as a tool of transparency, enabling imagination. Look at the maps to see the whole picture, the livers and kidneys of our economy, the large intestines of waste disposal, the capilaries of riversystems+ bike trails. Flying over the country you'll see the irrigated crop circles, on a train you see the strip-mines, from a bike you can often perceive the movement of sewage beneath the city. Observing the situation as it is, as it exists, with all the limitations and toxicities--we can suss out opportunities unseen from the mass media screen, we can reject the proscriptions of green-marketeers, profiteers and corporate carpetbaggers. We have sattelite imagery to check out what our neighbors are doing, and to find the patch of greenspace that is our future farm.
+
+      If you know of a great map- please email it to thegreenhorns@gmail.com, and we'll include it!
+
       amtrak routes
       !{width:700px}http://www.railescapes.com/images/amtrak/map_north_america.jpg!
       
       native american reservations
       !{width:700px}http://upload.wikimedia.org/wikipedia/commons/thumb/0/02/Bia-map-indian-reservations-usa.png/800px-Bia-map-indian-reservations-usa.png!
-      !{width:700px}http://www.aaanativearts.com/Native_American_map.jpg!
-      
+
+      cell phone coverage map
+      !{width:700px}http://www.cellonenation.com/images/coverage_map_home.png!
+
       soil maps
-      !{width:700px}http://www.epa.gov/oppefed1/ecorisk_ders/xsoils_fig1big.gif!
       !{width:700px}http://www.soils.umn.edu/academics/classes/soil2125/img/4usoils.jpg!
       
       hardiness zone map
@@ -92,23 +143,29 @@
       
       hay map
       !{width:700px}http://www.nass.usda.gov/research/atlas02/Crops/Hay%20and%20Forage%20Crops%20Harvested/Hay%20-%20All%20Hay%20Including%20Alfalfa,%20Other%20Tame,%20Small%20Grain,%20and%20Wild,%20Harvested%20Acres-choropleth%20map.gif!
-      
+
+      sprawl map
+      !{width:700px}http://www.sierraclub.org/sprawl/report98/sprawl_images/sprawl_map89a.gif!
+
+      superfund sites
+      !{width:700px}http://www.climateappraisal.com/images/SuperfundSites.gif!
+
       "agro-veillance":http://pruned.blogspot.com/2008/09/agro-veillance.html
       !http://farm4.static.flickr.com/3236/2823417545_594c5cdd73_o.jpg!
-    label: /images/text/maps.png
 - - page_004
   - permalink: faq
     name: FAQ
+    label: /images/text/faq_small.png
     content: |-
       
       !/images/labels/take_this_survey.png(take this survey?)!
-      
-      Click on this button to join the map, and begin entering data about your vision, practice and obstacles in farming.
-      
+
+      Click on "this link":/surveys/new to join the map, and begin entering data about your vision, practice and obstacles in farming.
+
       !/images/labels/nominate_a_farmer.png(nominate a farmer?)!
-      
-      Click this button to nominate your favorite farmer to our map. We'll then invite them to visit Serve Your Country Food to fill out the survey and become entered into our database.
-      
+
+      Click "this link":/nominations/new to nominate your favorite farmer to our map. We'll then invite them to visit Serve Your Country Food to fill out the survey and become entered into our database.
+
       !/images/labels/register_to_vote.png(Register to vote!)!
       
       Young farmers, young voters!  Our motto is " vote with your fork, vote with your vote, vote with your life"
@@ -142,6 +199,8 @@
       
       That way, the future young president of America, can hear directly from the future young farmers of America. The question becomes..  How can we shift the economic climate, the political climate and the land-use climate for the benefit of local agriculture and its practitioners? Can we shift the focus of our subsidy system away from commodity over-abundance and towards regional self-reliance, local food access, small farm capitalization, and sustainable ag. research? Could we, perhaps, ask for policy that reflects the reality of diabetes, sprawl, rural poverty and crooked planning boards?
       
+      !/images/GH.EggBasket.b:w.art.brk.png!
+
       !/images/labels/what_are_the_red_dots.png(What are the red dots?)!
       
       Many young farmers are still landless nomads working for a few months or years either as apprentices, seasonal farm-workers, tenants or land stewards. Usually this 'journeyman' period provides the skillset and management experience that beginning farmers need to start their own operations. The nomad feature allows such farmers to map their movements around the country and watch an animation of their perambulations. Taken in sum, the combined animation of hundreds of apprentices will dance across the map like some kind of crazy homeless honeybee dance- a great kinetic diorama of the 'farmers in waiting' - critical reminder that land ownership must become accessible to new farmers.
@@ -149,14 +208,6 @@
       !/images/labels/your_feedback_is_welcome.png(Your feedback is welcome!)!
       
       This site is still in development, and the survey is just the beginning of Serve Your Country Food. If you have some insight about how we might further enhance the site's functionality, or want to collaborate in organizing young-farmer oriented programming at conferences or agricultural trade shows around the country, or want to join the web-design team in some capacity. Please be in touch with us at thegreenhorns@gmail.com.  Also, bring on the constructive criticism!
-      
-      !/images/labels/why_we_like_maps.png(Why we like maps)!
-      
-      Maps are useful. Useful in building empires, yes--but also useful in retrofitting empires. Our landscape is scarred by the boundaries, sacrifice zones, dreams and drainages of American empire. Whether you live in the East, with its abandoned hydro-powered industrial infrastructure, or in the west with mega-dams and irrigated Eden, or in the midwest, with over-pumped aquifers and plastic tilings riddling the water table - it is clear that the legacies of past land use figure deeply into our plans for the future. The future that we are moving towards, that we are ourselves crafting with our physical work, and with our thoughtful engagement- that future cannot be contained only in the vessels+grid constructed in the last centuries. The future that we are building, the local food systems, the energy conservation systems, the sensible transport systems- these systems are a cooperative re-design of the whole social matrix. Overlaid on the map of the past, is a map for the future.
-      
-      Here we've linked to maps of cell phone reception, Amtrak rights of way,  oil pipe lines, rivers, national forests, native american reservation lands, highways, soil types, population densities, sheep migration patterns, land ownership statistics etc.   Like the early pioneers, whose settlements were shaped by hospitable valleys and favorable harbors or the industrial towns, perched on railway-intersections, cattle shipment yards, coal deposits- the work of future farmers is to use the mapped topography of America not as a constraint, but as a tool of transparency, enabling imagination. Look at the maps to see the whole picture, the livers and kidneys of our economy, the large intestines of waste disposal, the capilaries of riversystems+ bike trails. Flying over the country you'll see the irrigated crop circles, on a train you see the strip-mines, from a bike you can often perceive the movement of sewage beneath the city. Observing the situation as it is, as it exists, with all the limitations and toxicities--we can suss out opportunities unseen from the mass media screen, we can reject the proscriptions of green-marketeers, profiteers and corporate carpetbaggers. We have sattelite imagery to check out what our neighbors are doing, and to find the patch of greenspace that is our future farm.
-      
-      If you know of a great map- please email it to thegreenhorns@gmail.com, and we'll include it!
       
       !/images/labels/what_does_this_data_do.png(What does this data do?)!
       
@@ -172,6 +223,8 @@
       
       One major obstacle for the American public psyche is the clutter on the side of the highway loudly proclaiming its inevitibility. We are hemmed in by loud-mouthed con-men hawking burgers and burritos. Oh, also the highway sans bike-path--that is another problem.
       
+      !/images/GH.FermentJars.b:w.art.brk.png!
+
       !/images/labels/talking_to_the_press.png(Talking to the press)!
       
       So, you've filled out the survey, and you ticked the box that makes your mini-profile available to the press. Great! We added that function because we got so many calls from journalists looking for great young farmers to talk to. Now, hopefully, they'll just get in touch with you directly.
@@ -209,4 +262,3 @@
       !/images/text/need_guidance.png!
       
       here! download our 30-page zine  "Greenhorns guide for beginning farmers":/farm_guide.pdf
-    label: /images/text/faq.png
